--- a/styles.css
+++ b/styles.css
@@ -11,14 +11,23 @@ body {
   margin: 0;
   font-family: "Karla", sans-serif;
   font-size: 17px;
+  background-color:#E6EFF6;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 .main {
-  width: 100%;
-  height: 100vh;
+  width: 40rem;
+  height: 40rem;
+  margin: 20px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: repeat(2, 50%);
+  grid-template-rows: repeat(2, 50%);
 }
 
 .main__first-box {
@@ -27,7 +36,9 @@ body {
   justify-content: center;
   background-color: var(--ligth);
   grid-column: 1/3;
-  padding: 35px;
+  padding: 30px;
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
 }
 
 .main__first-box--title {
@@ -47,12 +58,14 @@ body {
 
 .main__second-box {
   background-color: var(--cyan);
-  padding: 35px;
+  padding: 30px;
+  border-bottom-left-radius: 7px;
 }
 
 .main__second-box--title {
   color: white;
-  font-size: 30px;
+  font-size: 1.5rem;
+  margin-top: 0px;
 }
 
 .main__second-box--price {
@@ -79,36 +92,43 @@ body {
   background-color: var(--brightYellow);
   border-radius: 5px;
   color: white;
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   font-size: 20px;
-  box-shadow: 0px 4px 10px rgba(0,0,0, 0.3);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
   outline: none;
   transition: all 200ms;
 }
 
 .main__second-box--button:active {
-  box-shadow: 0px 4px 10px rgba(0,0,0,0);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0);
 }
 
 .main__third-box {
   background-color: var(--second-Cyan);
-  padding: 35px;
+  padding: 30px;
+  border-bottom-right-radius: 7px;
 }
-
 
 .main__third-box--title {
   color: var(--ligth);
   font-size: 30px;
+  margin-top: 0px;
 }
 
 .main__third-box--text-content {
-  width: 70%;
-  line-height: 2.5rem;
+  line-height: 2rem;
   color: var(--ligth);
 }
 
-@media screen and  (max-width: 768px) {
-  .main{
+@media screen and (max-width: 768px) {
+  body{
+    padding: 0px;
+    box-sizing: content-box;
+  }
+
+  .main {
+    margin: 0px;
+    width: 100%;
     display: flex;
     flex-direction: column;
   }
